# spectre

./: .env.example  .gitignore  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pyprojects.toml  requirements.txt  run.sh  setup.py  setup.sh
backend/: Dockerfile  Dockerfile.dev  entry.sh  gunicorn.conf.py  pyproject.toml  pyprojects.toml  run.sh  run_dev_server.sh  run_spectre.sh
backend/api/: __init__.py
backend/default_configs/: capture_config_rsp1a-fixed-example.json
backend/default_profiles/: demo-sine.json  profiles_manifest.json  rtlsdr-fm-wide.json  rtlsdr-solar-20MHz.json
backend/scripts/: build_oot_module.sh  rsp_api.sh  start.sh
backend/scripts/bash/: build_oot_module.sh  cmd.sh  entrypoint.sh  install_spectre_latest.sh  start.sh
backend/scripts/cpp/: sdrplay_find_devices.cpp
backend/scripts/cron/: daily_capture.sh  default_crontab
backend/scripts/expect/: rsp_api.expect
backend/scripts/install/: build_oot_module.sh  dev_spectre_backend.sh  gr_sdrplay3.sh  gr_spectre.sh  spectre_backend.sh
backend/scripts/installation/: spectre_backend.sh
backend/services/: capture.py  create.py  delete.py  get.py  test.py  update.py  web_fetch.py
backend/src/spectre_server/: __init__.py  __main__.py  app.py  config.py  main.py
backend/src/spectre_server/api/: __init__.py  capture.py
backend/src/spectre_server/core/: __init__.py  exceptions.py
backend/src/spectre_server/core/batches/: __init__.py  _base.py  _batches.py  _iq_stream.py
backend/src/spectre_server/core/config/: __init__.py  _paths.py  _time_formats.py
backend/src/spectre_server/core/events/: __init__.py  _base.py  _fixed_center_frequency.py  _stfft.py  _swept_center_frequency.py
backend/src/spectre_server/core/fields/: __init__.py  _field_values.py  _fields.py
backend/src/spectre_server/core/flowgraphs/: __init__.py  _base.py  _constants.py  _hackrf.py  _rsp1a.py  _rsp1b.py  _rspduo.py  _rspdx.py  _rtlsdr.py  _rx888mk2.py  _signal_generator.py  _usrp.py
backend/src/spectre_server/core/io/: __init__.py  _files.py
backend/src/spectre_server/core/jobs/: __init__.py  _duration.py  _jobs.py  _workers.py
backend/src/spectre_server/core/logs/: __init__.py  _configure.py  _decorators.py  _logs.py  _process_types.py
backend/src/spectre_server/core/models/: __init__.py  _b200mini.py  _hackrf.py  _rsp1a.py  (+12 more)
backend/src/spectre_server/old_routes/: create.py  delete.py  get.py  start.py  test.py  update.py  web_fetch.py
backend/src/spectre_server/old_services/: create.py  delete.py  start.py  test.py  update.py  web_fetch.py
backend/src/spectre_server/routes/: __init__.py  _datetimes.py  _format_responses.py  _utils.py  batches.py  callisto.py  capture.py  capture_configs.py  chunks.py  configs.py  create.py  delete.py  get.py  jobs.py  logs.py  receivers.py  recordings.py  start.py  test.py  update.py  web_fetch.py
backend/src/spectre_server/services/: batches.py  callisto.py  capture.py  capture_configs.py  chunks.py  configs.py  create.py  delete.py  get.py  jobs.py  logs.py  receivers.py  recordings.py  test.py  update.py  web_fetch.py
backend/tests/: conftest.py  test_callisto.py  test_capture_configs.py
backend/tests/integration/: test_end_to_end.py
backend/tests/integration/core/: test_analytical.py
backend/tests/integration/routes/: test_receivers.py
backend/tests/unit/: __init__.py  test_models.py  test_plotting.py  test_receivers.py
backend/tests/unit/core/: test_batches.py  test_config.py  test_events.py  test_io.py  test_jobs.py  test_plotting.py  test_receivers.py  test_spectrograms.py
backend/tests/unit/services/: test_receivers.py
cli/: Dockerfile  __init__.py  main.py  pyproject.toml
cli/commands/: capture.py  create.py  delete.py  list.py  print.py  test.py  update.py  web_fetch.py
cli/scripts/bash/: install_spectre_latest.sh
cli/src/spectre_cli/: __init__.py  __main__.py  config.py
cli/src/spectre_cli/commands/: __init__.py  _cli_help.py  _pprint.py  _safe_request.py  _secho_resources.py  _shared.py  _utils.py  create.py  delete.py  download.py  get.py  record.py  start.py  test.py  update.py
(+310 files in other folders)
