[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-cli"
version = "0.0.1"
maintainers = [
  { name="Jimmy Fitzpatrick", email="jcfitzpatrick12@gmail.com" },
]
requires-python = ">=3.10.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer-slim==0.13.1",
    "requests==2.31.0",
    "spectre-core==0.0.9"
]


# Define the entry point for the CLI application
[project.scripts]
spectre = "spectre_cli.main:app"