[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-server"
version = "0.0.8"
authors = [
  { name = "Jimmy Fitzpatrick", email = "jcfitzpatrick12@gmail.com" }
]
requires-python = ">=3.10.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0 only",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "spectre-core==0.0.21",
    "flask==2.3.2",
    "gunicorn==21.2.0"
]
license = { file = "LICENSE" }
