[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-server"
version = "0.0.9"
authors = [
  { name = "Jimmy Fitzpatrick", email = "jcfitzpatrick12@gmail.com" }
]
requires-python = ">=3.10.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0 only",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "spectre-core==0.0.22",
    "flask==2.3.2",
    "gunicorn==21.2.0"
]
license = { file = "LICENSE" }


[project.optional-dependencies]
test = ["pytest", "mypy", "black"]