[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-server"
version = "3.3.2-alpha"
authors = [
  { name = "Jimmy Fitzpatrick", email = "jcfitzpatrick12@gmail.com" }
]
requires-python = ">=3.10.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0 only",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'numpy==1.24.0',
    'pyfftw==0.15.0',
    'astropy==6.0.1',
    'pydantic==2.12.3',
    'matplotlib==3.5.0',
    'watchdog==4.0.0',
    "flask==3.1.0",
    "gunicorn==21.2.0"
]
license = { file = "LICENSE" }


[project.optional-dependencies]
test = ["pytest==9.0.2", "mypy==1.19.1", "black==26.3.1"]
